<resources>
    <string name="app_name">BeParentApp</string>
    <string name="field_child_name_hint">Name</string>
    <string name="child_name_edit_hint">Enter name of child</string>
    <string name="add_button_description">Add new child</string>
    <string name="button_child_title">Children</string>
    <string name="button_timeout_title">Timeout</string>
    <string name="button_coinflip_title">Coin Flip</string>
    <string name="save_children_button">Save</string>
    <string name="delete_child_label">Delete</string>
    <string name="flip_tail_label">Flip Tails</string>
    <string name="flip_heads_label">Flip Heads</string>
    <string name="flip_coin_label">Flip Coin</string>
    <string name="coin_activity_description">Press button to flip!</string>
    <string name="coin_content_description">Image of coin</string>
    <string name="channel_name">TIMER</string>
    <string name="channel_description">TIMER_NOTIFICATION</string>
    <string name="notification_dismiss_title">DISMISS</string>
    <string name="label_num_pick_hour">Hour</string>
    <string name="label_num_pick_min">Min</string>
    <string name="label_num_pick_sec">Second</string>
    <string name="button_start_time">Start</string>
    <string name="button_1_min">1:00</string>
    <string name="button_2_min">2:00</string>
    <string name="button_3_min">3:00</string>
    <string name="button_5_min">5:00</string>
    <string name="button_10_min">10:00</string>
    <string name="button_15_min">15:00</string>
    <string name="button_stop_time">Pause</string>
    <string name="button_cancel_time">Cancel</string>
    <string name="button_resume_time">Resume</string>
    <string name="at_symbol">" @ "</string>
    <string name="text_noChildrenSelected">No Children Selected</string>
    <string name="text_pickedBy">"Picked by: "</string>
    <string name="text_configureChildren">Configure Children</string>
    <string name="text_editChild">Edit Child</string>
    <string name="text_addChild">Add Child</string>
    <string name="tasks_button_label">Tasks</string>
    <string name="child_portrait_content_description">Portrait of tasked child</string>
    <string name="string_none">None</string>
    <string name="string_image">image</string>
    <string name="task_name_hint">Enter name of task</string>
    <string name="child_icon_description">Image of child</string>
    <string name="child_in_charge_label">Whose Turn</string>
    <string name="completion_button_label">Task Completed</string>
    <string name="help_button_label">Help</string>
    <string name="help_author_label">Author</string>
    <string name="help_author_description">Developed by Team Beryllium.\n(Joshua Li, Randy Letran, Jacky Lim and Injun Lee)</string>
    <string name="help_reference_label">Reference</string>
    <string name="help_reference_description">
        <a href="https://freetone.org/ringtones/melodies-alarms">Alarm Sound</a>\n
        <a href="https://www.youtube.com/watch?v=k1IToREzXT4&amp;feature=youtu.be">Coin Flip Sound</a>\n
        <a href="https://github.com/lopspower/CircularImageView">Circular Imageview Library</a>\n
        <a href="https://en.wikipedia.org/wiki/Quarter_(Canadian_coin)#/media/File:Quarter_Obverse_2010.png">Coin Image</a>\n
        <a href="https://unsplash.com/photos/TEmj-jIovk4">Light Mode Background</a>\n
        <a href="https://unsplash.com/photos/Uf-_p8zZiT8">Dark Mode Background</a>\n
        <a href="https://www.youtube.com/watch?v=3uFWnIGmiMQ">Breathing Sounds</a>
    </string>
    <string name="choose_image">Choose Image</string>
    <string name="use_camera">Use camera</string>
    <string name="string_queue">Queue:</string>
    <string name="button_take_breath_label">Take Breath</string>
    <string name="text_breath_picker_top_idle">Let\'s take</string>
    <string name="text_breath_picker_bottom_idle">breaths together</string>
    <string name="text_breath_picker_top_active">There are</string>
    <string name="text_breath_picker_bottom_active">breaths remaining</string>
    <string name="button_breath_exhale_label">Out</string>
    <string name="button_breath_finish_label">Good job!</string>
    <string name="button_breath_inhale_label">In</string>
    <string name="button_breath_begin_label">Begin</string>
    <string name="text_breath_help_begin">Select number of breaths and press the button to start</string>
    <string name="text_breath_help_inhale_start">Hold down the button and breath in</string>
    <string name="text_breath_help_inhale_finish">Breath out and let go of the button</string>
    <string name="text_breath_help_inhale_long">Consider letting go of the button now</string>
    <string name="text_breath_help_exhale_begin">Exhale slowly</string>
    <string name="text_breath_help_exhale_end">Hold down the button and breath in</string>
    <string name="title_breath_activity">Breath Helper</string>
    <string name="text_breath_history_flavour">Which is around %d seconds of breathing, wow!</string>
    <string name="text_breath_history_count">%d Breaths</string>
    <string name="text_breath_history_count_single">%d Breath</string>
    <string name="text_breath_history_header">In total you have taken</string>
    <string name="title_breath_history_frag">Breath History</string>
    <string name="button_positive_breath_history">Neat</string>
    <string name="cd_button_increase_breath">Increase breaths</string>
    <string name="cd_button_decrease_breath">Decrease breaths</string>
    <string name="cd_breath_circle">Breathing animation image</string>
    <string name="button_home_children">Children</string>
    <string name="button_home_timeout">Timeout</string>
    <string name="button_home_coinflip">Coinflip</string>
    <string name="button_home_tasks">Tasks</string>
    <string name="button_home_breath">Breath</string>
    <string name="item_quarter">25%</string>
    <string name="item_half">50%</string>
    <string name="item_full">100%</string>
    <string name="item_double">200%</string>
    <string name="item_triple">300%</string>
    <string name="item_quadruple">400%</string>
    <string name="text_default_speed_rate">Speed Rate : 100%</string>
    <string name="warning_empty_child">Please enter a name for the child.</string>
    <string name="dialog_error_title">Error</string>
    <string name="dialog_error_body">Unable to save image</string>
    <string name="dialog_warn_title">Deleting Child</string>
    <string name="dialog_warn_body">Are you sure you want to do this?</string>
    <string name="dialog_discard_title">Discard Changes</string>
    <string name="dialog_discard_body">Changes will not be saved, are you sure?</string>
    <string name="warning_empty_task">Please enter a name for the task.</string>
    <string name="appbar_add_task">New Task</string>
    <string name="appbar_edit_task">Task</string>
    <string name="appbar_list_task">Tasks</string>
    <string name="dialog_time_title">Time\'s up!</string>
    <string name="dialog_time_body">You can turn off the alarm by clicking Yes button</string>
    <string name="notif_timeout_title">Timeout</string>
    <string name="notif_timeout_body">Time\'s up!</string>
    <string name="appbar_help">Help</string>
    <string name="appbar_coinflip_history">History</string>
    <string name="appbar_timeout">Timeout</string>
    <string name="appbar_coinflip">Coin Flip</string>
    <string name="task_history_label">Completion History</string>
    <string name="item_3fourth">75%</string>
</resources>