<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoinFlipActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.BeParentApp.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimarySurface"
            app:popupTheme="@style/Theme.BeParentApp.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>


    <ImageView
        android:id="@+id/coin_image"
        android:layout_width="216dp"
        android:layout_height="183dp"
        android:src="@drawable/coin_heads"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flipResult"
        app:layout_constraintVertical_bias="0.056"
        android:contentDescription="@string/coin_content_description" />

    <Button
        android:id="@+id/tailsButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="52dp"
        android:text="@string/flip_tail_label"
        app:layout_constraintHorizontal_weight="1"

        app:layout_constraintStart_toEndOf="@+id/flipCoinButton"
        app:layout_constraintTop_toBottomOf="@+id/coin_image" />

    <Button
        android:id="@+id/headsButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="12dp"
        android:text="@string/flip_heads_label"
        app:layout_constraintEnd_toStartOf="@+id/flipCoinButton"

        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/coin_image" />

    <Button
        android:id="@+id/flipCoinButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:text="@string/flip_coin_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coin_image"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/flipResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/coin_activity_description"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appBarLayout" />

    <TextView
        android:id="@+id/coinNextChild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coin_image" />

</androidx.constraintlayout.widget.ConstraintLayout>