<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.TaskEditActivity">

    <EditText
        android:id="@+id/field_activity_task_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/task_name_hint"
        android:inputType="textCapSentences"
        android:text=""
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="Name of task goes here" />

    <LinearLayout
        android:id="@+id/layout_tasked_child"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:background="@drawable/rounded_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_tasked_child_label">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_activity_tasked_child"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:contentDescription="@string/child_icon_description"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/text_activity_tasked_child"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="30dp"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:text=""
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_tasked_child_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/child_in_charge_label"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/layout_tasked_child"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_activity_task_name" />

    <Button
        android:id="@+id/button_complete_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:drawableLeft="@drawable/ic_baseline_check_24"
        android:text="@string/completion_button_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_tasked_child"
        tools:ignore="RtlHardcoded" />

    <ListView
        android:id="@+id/listview_task_history"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_complete_history" />

    <TextView
        android:id="@+id/text_complete_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/task_history_label"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_complete_task" />
</androidx.constraintlayout.widget.ConstraintLayout>